# Morn

./: CMakeLists.txt  Makefile.gnu  Makefile.mingw  Makefile.msvc  Morn.pc.in  MornConfig.cmake.in  README.md  gnu_makefile  mingw_makefile  msvc_makefile
doc/: Chrono.md  Map.md  Math.md  MathParser.md  Morn ini文件.md  Morn vector & matrix.md  Morn_json_en.md  Morn内存块.md  Morn内存池.md  Morn异常处理.md  Morn文件加密解密.md  Morn日志文件.md  Morn映射.md  Morn矩阵.md  Morn链表.md  Morn默认参数.md  Morn：MImage图像.md  Morn：MImage图像加载和保存.md  Morn：MList一维容器2.md  Morn：MList栈和队列.md  Morn：MList表单（一维容器）2.md  Morn：MTensor张量.md  Morn：ini文件.md  Morn：json文件.md  Morn：二叉树.md  Morn：傅里叶变换.md  Morn：内存池.md  Morn：内存监查.md  Morn：命令行解析.md  Morn：图像.md  Morn：图像加载和保存.md  Morn：图像坐标变换.md  Morn：图像坐标变换2.md  Morn：图像数据流.md  Morn：图像缩放.md  Morn：图像颜色空间.md  Morn：大数运算.md  Morn：容器.md  Morn：容器2.md  Morn：对象属性.md  (+29 more)
example/: JSON.c  TCP1.c  TCP2.c  TCP3.c  TCP4.c  UDP.c  coroutine2.c  coroutine3.c  coroutine_example1.c  coroutine_example3.c  coroutine_example4.c  coroutine_flag.c  log_file.c  log_file_rotate.c  map5.c  proc_message.c  sort_example.c  thread2.c  thread3.c  thread_example1.c  thread_pool1.c  thread_pool2.c  thread_pool3.c  thread_pool_example1.c  timer.c
include/: morn_image.h  morn_math.h  morn_ptc.h  morn_tensor.h  morn_util.h  morn_wave.h
lib/include/: f77blas.h  jpeglib.h  openblas_config.h  win_pthread.h
lib/x64/gnu/: ReadMe.md
lib/x64/mingw/: ReadMe.md
lib/x64/msvc/: ReadMe.md  libjpeg.lib  libpng.lib  zlib.lib
lib/x64_gnu/: ReadMe.md
lib/x64_mingw/: ReadMe.md
lib/x64_msvc/: ReadMe.md
performance/: graph.cpp
src/: morn_memory_block.c
src/deep_learning/: morn_learning_net.c  morn_learninig_loss.c  morn_tensor.c  morn_tensor_activation.c  morn_tensor_batch_normlize.c  morn_tensor_caculate.h  morn_tensor_channel.c  morn_tensor_connect.c  morn_tensor_conv.c  morn_tensor_conv2.c  morn_tensor_data.c  morn_tensor_deconv.c  morn_tensor_detect.c  morn_tensor_in_out.c  morn_tensor_mul.c  morn_tensor_noise.c  morn_tensor_pool.c  morn_tensor_reshape.c  morn_tensor_resize.c
src/image/: morn_image.c  morn_image_IO.c  morn_image_binary.c  morn_image_caculate.h  morn_image_color.c  morn_image_convert.c  morn_image_draw.c  morn_image_file.c  morn_image_filter.c  morn_image_geometry.c  morn_image_geometry2.c  morn_image_gradient.c  morn_image_hist.c  morn_image_integration.c  morn_image_mask.c  morn_image_morphology.c  morn_image_resize.c  morn_image_segment.c  morn_image_seperate.c  morn_image_seperate2.c  morn_image_shape.c  morn_image_similarity.c  morn_image_target.c  morn_image_thresh.c  morn_image_transform.c  morn_image_transform2.c  morn_vedio_background.c
src/math/: morn_MAT_file.c  morn_caculate.c  morn_calculate.c  morn_fit_LSM.c  morn_gaussian.c  morn_interpolation.c  morn_large_integer.c  morn_math_common.c  morn_matrix.c  morn_matrix2.c  morn_regression.c  morn_sort.c
src/ptc/: morn_buffer.c  morn_coroutine.c  morn_message.c  morn_pipeline.c  morn_process.c  morn_thread.c  morn_thread_pool.c
src/util/: morn_CRC.c  morn_DES.c  morn_INI.c  morn_INI_file.c  morn_JSON.c  morn_JSON_file.c  morn_TAR.c  morn_array.c  morn_btree.c  morn_buffer.c  morn_builder.c  morn_chain.c  morn_codec.c  morn_csv.c  morn_dictionary.c  morn_file.c  morn_file_list.c  morn_graph.c  morn_list.c  morn_log.c  morn_lru.c  morn_map.c  morn_memory.c  morn_memory_block.c  morn_message.c  morn_pipeline.c  morn_process.c  morn_sheet.c  morn_string.c  morn_table.c  morn_text.c  morn_thread_pool.c  morn_time.c  morn_tree.c  morn_universal.c
src/wave/: morn_PSwave_filter.c  morn_WAV_file.c  morn_audio_volume.c  morn_wave.c  morn_wave_FFT.c  morn_wave_filter.c  morn_wave_normalize.c  morn_wave_pitch.c  morn_wave_preprocess.c  morn_wave_resample.c  morn_wave_sequence.c  morn_wave_shape.c
src/wrap/: morn_JPG.c  morn_PNG.c  morn_USB_Camera.cpp  morn_blas.c  morn_socket.c  morn_stb_image.c  stb_image.h
test/: a_Q_zheng_zhuan.txt  test_CRC.c  test_CRC2.cpp  test_INI_file.c  test_INI_file.ini  test_INI_file_out.ini  test_JSON_file.c  test_JSON_file.json  test_JSON_file2.c  test_JSON_file2.cpp  test_TCP.c  test_UDP.c  test_argument.c  test_array2.cpp  test_binary.cpp  test_blas.c  test_caculate.c  test_calculate.c  test_chrono.c  test_cl.c  test_cl2.c  test_cl3.cpp  test_clblas.c  test_color_convert.c  test_convex_hull.cpp  test_coroutine.c  test_csv.c  test_datatype.c  test_dictionary.c  test_dictionary2.cpp  test_event.c  test_fft.c  test_fft2.c  test_fit_LSM.c  test_geometry.c  test_geometry2.cpp  test_geometry3.c  test_geometry4.c  test_graph.c  test_image_binary.c  (+65 more)
tool/: Crypt.c  HashValue.c  caculate.c  calculate.c  crypt.c  hashvalue.c  help.txt  image_type.c  imageformat.c  morn_help.h
